# rusty-matrix-io

./: Cargo.toml  README.md  rustfmt.toml
src/: lib.rs
