[package]
name = "rusty-matrix-io"
version = "0.1.0"
authors = ["Jason Reilly <jdr0887@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_once = "^0.2"
chrono = "0.4.38"
csv = "^1.1"
clap = { version = "^4.5", features = ["derive"] }
env_logger = "^0.11"
evalexpr = "^11.3"
humantime = "^2.1"
in-place = "^0.2"
itertools = "^0.13"
lazy_static = "^1.3"
log = { version = "^0.4", features = ["std"] }
polars = { version = "^0.44", features = ["default", "json", "cross_join", "lazy", "coalesce", "polars-lazy"] }
rayon = "^1.5"
regex = "^1.5"
reqwest = { version = "^0.12", features = ["default", "json"] }
serde = { version = "^1.0", features = ["derive", "serde_derive"] }
serde_derive = "^1.0"
serde_json = "^1.0"
serde_with = { version = "^3.11", features = ["std", "macros", "json"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }